[gd_scene load_steps=18 format=3 uid="uid://c7532vujfwgmn"]

[ext_resource type="Theme" uid="uid://wbvix152d8b5" path="res://apps/painter/assets/themes/draw_tools.tres" id="1_cdixw"]
[ext_resource type="Texture2D" uid="uid://c1oyf7lcynirk" path="res://apps/painter/assets/icons/advanced_view.svg" id="2_abnjo"]
[ext_resource type="Script" path="res://apps/painter/scenes/view_tools.gd" id="3_amfqc"]
[ext_resource type="FontFile" uid="uid://doyre2d68vvpi" path="res://static/fonts/Nunito/Nunito-Bold.ttf" id="4_cjkh7"]
[ext_resource type="Script" path="res://interface/components/drop_menu/drop_menu.gd" id="4_p4ikt"]
[ext_resource type="Texture2D" uid="uid://desksw0jv238g" path="res://apps/painter/assets/icons/even.svg" id="5_kwijp"]
[ext_resource type="Texture2D" uid="uid://crfk2s5k2gfli" path="res://apps/painter/assets/icons/odd.svg" id="6_gqbvh"]
[ext_resource type="Texture2D" uid="uid://bqrpqs6dqd7lo" path="res://apps/painter/assets/icons/precision.svg" id="7_cnrms"]
[ext_resource type="Texture2D" uid="uid://feal5xxkatsd" path="res://apps/painter/assets/icons/recenter.svg" id="8_a43ac"]
[ext_resource type="Script" path="res://utils/stylesheet/nodes/style_sheet_setter.gd" id="9_t0rfg"]
[ext_resource type="Script" path="res://utils/stylesheet/resources/stylebox_style_sheet.gd" id="10_5u8l2"]

[sub_resource type="Gradient" id="Gradient_84slf"]
offsets = PackedFloat32Array(0, 0.41055, 0.733945, 0.981735)
colors = PackedColorArray(0.117647, 0.160784, 0.231373, 0.490196, 0.117647, 0.160784, 0.231373, 0.196078, 0.117647, 0.160784, 0.231373, 0.0392157, 0.117647, 0.160784, 0.231373, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6xsj8"]
gradient = SubResource("Gradient_84slf")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgr7x"]
content_margin_left = 24.0
content_margin_top = 42.0
content_margin_right = 24.0
content_margin_bottom = 36.0
bg_color = Color(0.2, 0.254902, 0.333333, 0.941176)
border_width_top = 30
border_color = Color(0.278431, 0.333333, 0.411765, 1)
border_blend = true
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Resource" id="Resource_3hirj"]
script = ExtResource("10_5u8l2")
apply_styles = "radius_0_30_30_30"
default_style_names = "panel"
preset = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14nvp"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pt6kw"]
color = Color(0.278431, 0.333333, 0.411765, 1)
grow_begin = 24.0
grow_end = 24.0
thickness = 2

[node name="ViewToolsButton" type="Button"]
custom_minimum_size = Vector2(80, 80)
offset_right = 80.0
offset_bottom = 80.0
theme = ExtResource("1_cdixw")
icon = ExtResource("2_abnjo")
expand_icon = true
script = ExtResource("3_amfqc")

[node name="DropMenu" type="Control" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource("4_p4ikt")
container = NodePath("../CanvasLayer/MarginContainer")
triangle_outline_width = {
"bottom": 0,
"left": 0,
"right": 0,
"top": 0
}
right_angle = true
margin = Vector2(0, -20)
triangle_color = Color(0.27451, 0.329412, 0.407843, 1)
triangle_outline_color = Color(0, 0, 0, 1)
remake = false
test_open = false
test_close = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AreaButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_cdixw")
theme_type_variation = &"AreaButtonTopLeft"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 60.0
mouse_filter = 2
theme = ExtResource("1_cdixw")
theme_override_constants/margin_left = 0

[node name="DropShadowContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer"]
offset_top = 24.0
offset_right = 764.0
offset_bottom = 1708.0
mouse_filter = 2
theme_override_constants/margin_left = -80
theme_override_constants/margin_top = -100

[node name="DropShadow" type="TextureRect" parent="CanvasLayer/MarginContainer/DropShadowContainer"]
custom_minimum_size = Vector2(660, 760)
offset_left = -80.0
offset_top = -100.0
offset_right = 580.0
offset_bottom = 660.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = SubResource("GradientTexture2D_6xsj8")
ignore_texture_size = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(440, 200)
offset_top = 24.0
offset_right = 440.0
offset_bottom = 755.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"DropMenuPanel"
theme_override_styles/panel = SubResource("StyleBoxFlat_vgr7x")

[node name="StyleSheetSetter" type="Node" parent="CanvasLayer/MarginContainer/PanelContainer"]
script = ExtResource("9_t0rfg")
target_node_path = NodePath("..")
stylebox_style_sheet = SubResource("Resource_3hirj")
update_base_node = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/PanelContainer"]
offset_left = 24.0
offset_top = 42.0
offset_right = 416.0
offset_bottom = 695.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_right = 392.0
offset_bottom = 45.0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("4_cjkh7")
text = "Ratio mode"
vertical_alignment = 2

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_top = 45.0
offset_right = 392.0
offset_bottom = 147.0
theme_type_variation = &"SmallLabel"
text = "The ratio mode defines whether the canvas is divided into multiples of two, or multiples of three."
vertical_alignment = 2
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_top = 147.0
offset_right = 392.0
offset_bottom = 167.0
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_14nvp")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_top = 167.0
offset_right = 392.0
offset_bottom = 247.0
size_flags_horizontal = 3

[node name="EvenButton" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_right = 184.0
offset_bottom = 80.0
pivot_offset = Vector2(40, 40)
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"SuccessButton"
icon = ExtResource("5_kwijp")
icon_alignment = 1
expand_icon = true

[node name="OddButton" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_left = 208.0
offset_right = 392.0
offset_bottom = 80.0
pivot_offset = Vector2(40.0001, 40)
size_flags_horizontal = 3
size_flags_vertical = 4
icon = ExtResource("6_gqbvh")
icon_alignment = 1
expand_icon = true

[node name="HSeparator4" type="HSeparator" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_top = 247.0
offset_right = 392.0
offset_bottom = 267.0
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_14nvp")

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_top = 267.0
offset_right = 392.0
offset_bottom = 287.0
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_pt6kw")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_top = 287.0
offset_right = 392.0
offset_bottom = 548.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
offset_top = 24.0
offset_right = 392.0
offset_bottom = 237.0
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
offset_right = 392.0
offset_bottom = 45.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_cjkh7")
text = "Precision mode"

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
offset_top = 45.0
offset_right = 392.0
offset_bottom = 113.0
theme_type_variation = &"SmallLabel"
text = "Precision mode allows for more detailed placement."
autowrap_mode = 3

[node name="HSeparator5" type="HSeparator" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
offset_top = 113.0
offset_right = 392.0
offset_bottom = 133.0
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_14nvp")

[node name="PrecisionToggle" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_top = 133.0
offset_right = 392.0
offset_bottom = 213.0
theme_override_constants/h_separation = 20
text = "Enable"
icon = ExtResource("7_cnrms")
alignment = 0
expand_icon = true

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
offset_top = 548.0
offset_right = 392.0
offset_bottom = 578.0
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_pt6kw")

[node name="RecenterButton" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
offset_top = 578.0
offset_right = 392.0
offset_bottom = 653.0
pivot_offset = Vector2(40, 40.0001)
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/h_separation = 20
text = "Recenter"
icon = ExtResource("8_a43ac")
alignment = 0
expand_icon = true

[connection signal="pressed" from="." to="." method="_on_view_tools_button_pressed"]
[connection signal="closing" from="DropMenu" to="." method="_on_menu_closing"]
[connection signal="opening" from="DropMenu" to="." method="_on_menu_opening"]
[connection signal="pressed" from="CanvasLayer/AreaButton" to="." method="_on_area_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/EvenButton" to="." method="_on_even_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/OddButton" to="." method="_on_odd_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/PrecisionToggle" to="." method="_on_precision_toggle_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/RecenterButton" to="." method="_on_recenter_button_pressed"]
